--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 .navbar {
   z-index: 2;
   display: block;
@@ -27,7 +29,7 @@
   backdrop-filter: blur(6px);
 }
 
-.navbar-div {
+.navbarDiv {
   position: relative;
   z-index: 2;
   display: flex;
@@ -35,4 +37,18 @@
   height: 100%;
   justify-content: space-between;
   align-items: center;
+  padding: 0px 40px;
+}
+
+.navbarLinks {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  margin: 0px 0px 0px 32px;
+  padding: 15px 0px;
+  transition: color 0.25s ease-out, text-shadow 0.25s ease-out;
+}
+
+.navbarLinks:hover {
+  color: greenyellow;
+  text-shadow: 0 0 6px rgba(172, 255, 47, 0.5), 0 0 10px rgba(172, 255, 47, 0.5);
 }
