--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,54 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 
 .navbar {
-  z-index: 2;
-  display: block;
-  width: 100%;
+  width: 90%;
+  height: 100%;
+  margin-top: 28px;
+  margin-left: auto;
+  margin-right: auto;
   height: 75px;
-  margin-top: 16px;
-  margin-bottom: 16px;
-  flex-flow: column;
+  padding: 0px 40px 0px 40px;
   justify-content: center;
-  align-items: center;
-  border-style: solid;
-  border-width: 1px 1px 2px;
-  border-color: rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.3)
-    rgba(255, 255, 255, 0.3);
-  border-radius: 6px;
-  background-color: rgba(0, 0, 0, 0);
-  background-image: radial-gradient(
-      circle at 75% 96%,
-      rgba(10, 3, 40, 0.57),
-      rgba(10, 3, 40, 0.15)
-    ),
-    linear-gradient(
-      186deg,
-      rgba(255, 255, 255, 0.17),
-      rgba(255, 255, 255, 0.33)
-    );
-  backdrop-filter: blur(6px);
+  font-family: "Montserrat", sans-serif;
+  
 }
 
-.navbarDiv {
-  position: relative;
-  z-index: 2;
+.navbar-content {
   display: flex;
   width: 100%;
   height: 100%;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 40px;
 }
 
-.navbarLinks {
-  font-family: 'Montserrat', sans-serif;
+.navbar-logo {
+  width: 200px;
+  height: auto;
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-link-container {
+  display: flex;
+  align-items: center;
+  gap: 12px;
   font-weight: 500;
-  margin: 0px 0px 0px 32px;
-  padding: 15px 0px;
+  margin-right: 22px;
+  padding: 15px 0px 15px 0px;
+}
+
+.navbar-link {
+  padding: 5px 10px;
   transition: color 0.25s ease-out, text-shadow 0.25s ease-out;
 }
 
-.navbarLinks:hover {
+.navbar-link:hover {
   color: greenyellow;
   text-shadow: 0 0 6px rgba(172, 255, 47, 0.5), 0 0 10px rgba(172, 255, 47, 0.5);
 }
