--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,16 @@
   }
 }
 
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -24,12 +30,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 a {
@@ -48,7 +48,6 @@ ul {
 }
 
 /* General Custom Styles */
-
 .glass {
   border-style: solid;
   border-width: 1px 1px 1px 1px;
@@ -66,12 +65,14 @@ ul {
       rgba(255, 255, 255, 0.17),
       rgba(255, 255, 255, 0.33)
     );
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(10px);
+  position: relative;
+  z-index: 1;
 }
 
 
+/* Layout Debug */
 * {
-  /* Layout Debug */
   outline: 1px solid greenyellow;
   outline: none;
 }
