--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,15 +2,16 @@
 
 .navbar {
   width: 90%;
-  height: 100%;
-  margin-top: 28px;
-  margin-left: auto;
-  margin-right: auto;
-  height: 75px;
+  height: 80px;
+  max-width: 1200px;
+  margin-top: 12px;
   padding: 0px 40px 0px 40px;
   justify-content: center;
   font-family: "Montserrat", sans-serif;
-  
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
 }
 
 .navbar-content {
