--- a/src/app/default/page.module.css
+++ b/src/app/default/page.module.css
@@ -1,4 +1,3 @@
-
 .main {
   display: flex;
   flex-direction: column;
@@ -21,6 +20,7 @@
   scroll-snap-type: y mandatory;
   background-color: #777;
   overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 .scroll-section {
@@ -28,10 +28,16 @@
   scroll-snap-align: start;
   height: 100%;
   background-color: rgb(70, 75, 75);
-  
+
   &:nth-child(even) {
     background-color: rgb(184, 183, 199);
   }
+}
+
+.scroll-section.active {
+  border-left: 4px solid #ff6b6b;
+  background-color: rgb(100, 120, 100) !important;
+  box-shadow: inset 0 0 20px rgba(255, 107, 107, 0.1);
 }
 
 .footer {
