--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,22 @@ ul {
   }
 }
 
+/* Formatting Classes */
+.section {
+  padding: 3rem 0;
+  margin: 3rem 0;
+}
+
+.container {
+  max-width: 1024px;
+  padding: 0 2rem;
+  margin: 0 auto;
+
+  @media (max-width: 640px) {
+    padding: 0 1rem;
+  }
+}
+
 /* General Custom Styles */
 .glass {
   border-style: solid;
