--- a/src/app/default/page.module.css
+++ b/src/app/default/page.module.css
@@ -18,7 +18,7 @@
   margin-top: 104px;
   height: 100vh;
   scroll-snap-type: y mandatory;
-  background-color: #777;
+  /* background-color: #777; */
   overflow-y: scroll;
   scroll-behavior: smooth;
 }
@@ -27,18 +27,18 @@
   scroll-snap-stop: always;
   scroll-snap-align: start;
   height: 100%;
-  background-color: rgb(70, 75, 75);
+  background: none;
 
-  &:nth-child(even) {
-    background-color: rgb(184, 183, 199);
-  }
+  /* &:nth-child(even) {
+    background: none;
+  } */
 }
 
-.scroll-section.active {
+/* .scroll-section.active {
   border-left: 4px solid #ff6b6b;
   background-color: rgb(100, 120, 100) !important;
   box-shadow: inset 0 0 20px rgba(255, 107, 107, 0.1);
-}
+} */
 
 .footer {
   scroll-snap-align: end;
