--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css");
-
+@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -27,7 +28,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -81,10 +82,18 @@ ul {
       rgba(255, 255, 255, 0.17),
       rgba(255, 255, 255, 0.33)
     );
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(1px);
   position: relative;
   z-index: 1;
 }
+
+.shadowed-container {
+  background-color: rgba(5, 0, 16, 0.7);
+  box-shadow: 0px 0px 12px 12px rgba(5, 0, 16, 0.7);
+  
+
+}
+
 
 
 /* Layout Debug */
