--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 :root {
   --background: #ffffff;
@@ -28,7 +28,6 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  /* font-family: Arial, Helvetica, sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -87,14 +86,28 @@ ul {
   z-index: 1;
 }
 
-.shadowed-container {
-  background-color: rgba(5, 0, 16, 0.7);
-  box-shadow: 0px 0px 12px 12px rgba(5, 0, 16, 0.7);
-  
-
+.full-dropshadow {
+  position: relative;
+  border-radius: 20px;
 }
 
-
+.full-dropshadow::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  
+  /* Radial gradient mask against background */
+  -webkit-mask: radial-gradient(ellipse 70% 20%, black 40%, transparent 70%);
+  mask: radial-gradient(ellipse 75% 60%, black 40%, transparent 70%);
+  background-color: rgba(5, 0, 16, 0.25);
+  
+  border-radius: 20px;
+  z-index: -1;
+  pointer-events: none;
+}
 
 /* Layout Debug */
 * {
