--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -38,17 +38,12 @@
 }
 
 .scroll-section {
+  position: relative;
   scroll-snap-stop: always;
   scroll-snap-align: start;
   height: 100%;
   background: none;
 }
-
-/* .scroll-section.active {
-  border-left: 4px solid #ff6b6b;
-  background-color: rgb(100, 120, 100) !important;
-  box-shadow: inset 0 0 20px rgba(255, 107, 107, 0.1);
-} */
 
 .footer {
   scroll-snap-align: end;
