--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import url("https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -65,24 +65,89 @@ ul {
 
 /* General Custom Styles */
 .glass {
+  position: relative;
   border-style: solid;
   border-width: 1px 1px 1px 1px;
-  border-color: rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.3)
-    rgba(255, 255, 255, 0.3);
-  border-radius: 6px;
-  background-color: rgba(0, 0, 0, 0);
+  border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
+    rgba(146, 255, 230, 0.1);
+  border-radius: 5px;
+  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.15);
   background-image: radial-gradient(
       circle at 75% 96%,
-      rgba(10, 3, 40, 0.57),
-      rgba(10, 3, 40, 0.15)
+      rgba(146, 255, 230, 0.57),
+      rgba(146, 255, 230, 0.15)
     ),
     linear-gradient(
       186deg,
-      rgba(255, 255, 255, 0.17),
-      rgba(255, 255, 255, 0.33)
+      rgba(235, 148, 255, 0.17),
+      rgba(235, 148, 255, 0.33)
     );
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(5px);
+  z-index: 1;
+}
+
+.glass-alt {
   position: relative;
+  border-style: solid;
+  border-width: 1px 1px 1px 1px;
+  border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
+  rgba(146, 255, 230, 0.1);
+  box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
+  background-image: radial-gradient(
+      circle at 80% 10%,
+      rgba(186, 194, 141, 0.20) 10%,
+      rgba(170, 144, 255, 0) 55%
+    ),
+    linear-gradient(
+      270deg,
+      rgba(148, 171, 255, 0.1),
+      rgba(90, 30, 255, 0.2)
+    );
+  border-radius: 10px;
+  backdrop-filter: blur(7px);
+  z-index: 1;
+}
+
+.glass-dark-primary {
+  position: relative;
+  border-style: solid;
+  border-width: 1px 1px 1px 1px;
+  border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
+  rgba(146, 255, 230, 0.1);
+  box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
+  background-image: radial-gradient(
+      circle at 80% 10%,
+      rgba(186, 194, 141, 0.15) 10%,
+      rgba(170, 144, 255, 0) 55%
+    ),
+    linear-gradient(
+      270deg,
+      rgba(148, 171, 255, 0.1),
+      rgba(90, 30, 255, 0.15)
+    );
+  border-radius: 8px;
+  backdrop-filter: blur(5px);
+  z-index: 1;
+}
+
+.glass-dark-secondary {
+  position: relative;
+  border-style: none;
+  border-width: 1px 1px 1px 1px;
+  border-color: rgba(146, 255, 230, 0.1) rgba(146, 255, 230, 0.05)
+  rgba(146, 255, 230, 0.05);
+  background-image: radial-gradient(
+      circle at 80% 10%,
+      rgba(186, 194, 141, 0.05) 10%,
+      rgba(170, 144, 255, 0) 55%
+    ),
+    linear-gradient(
+      270deg,
+      rgba(148, 171, 255, 0.05),
+      rgba(90, 30, 255, 0)
+    );
+  border-radius: 8px;
+  backdrop-filter: blur(5px);
   z-index: 1;
 }
 
@@ -100,8 +165,8 @@ ul {
   bottom: 0;
   
   /* Radial gradient mask against background */
-  -webkit-mask: radial-gradient(ellipse 70% 20%, black 40%, transparent 70%);
-  mask: radial-gradient(ellipse 75% 60%, black 40%, transparent 70%);
+  -webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
+  mask: radial-gradient(ellipse 75% 60%, rgba(5, 0, 16, 0.8) 35%, transparent 70%);
   background-color: rgba(5, 0, 16, 0.25);
   
   border-radius: 20px;
