--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,7 @@
 .navbar {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.3em;
+  text-shadow: 0px 0px 20px rgb(5, 0, 16, 0.7);
   position: fixed;
   transform: translateX(-50%);
   left: 50%;
@@ -8,9 +11,6 @@
   margin-top: 12px;
   padding: 0px 80px 0px 80px;
   justify-content: center;
-  font-family: "Montserrat", "Jura", sans-serif;
-  font-size: larger;
-  text-shadow: 0px 0px 20px rgb(5, 0, 16, 0.7);
   z-index: 2;
 }
 
