--- a/src/components/Section-1/Home.module.css
+++ b/src/components/Section-1/Home.module.css
@@ -1,4 +1,4 @@
-.parent-container {
+.home-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,7 +7,16 @@
   padding-bottom: 40vh;
 }
 
-.name-container {
+.buttons-wrapper {
+  /* padding: 0px 230px; */
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  width: 63%;
+  gap: 30px;
+}
+
+.name-wrapper {
   font-family: "Jura", "Montserrat", sans-serif;
   font-size: 12rem;
   font-weight: 500;
@@ -18,6 +27,7 @@
   user-select: none;
   text-shadow: 0px 0px 18px rgba(5, 0, 16, 0.3),
     0px 0px 24px rgba(5, 0, 16, 0.6);
+  /* color: rgba(148, 200, 255, 0.65); */
 }
 
 .dirk {
@@ -58,11 +68,11 @@
 }
 
 .dirk.animate {
-  animation: fadeInText 2s ease-out forwards;
+  animation: fadeInText 1.5s ease-out forwards;
   animation-delay: 0.2s;
 }
 
 .wilson.animate {
-  animation: fadeInText 2s ease-out forwards;
+  animation: fadeInText 1.5s ease-out forwards;
   animation-delay: 0.65s;
 }
