--- a/src/components/Buttons/ActionButton.module.css
+++ b/src/components/Buttons/ActionButton.module.css
@@ -1,10 +1,24 @@
 .action-button {
   user-select: none;
   font-family: "Jura", sans-serif;
-  color: rgb(207, 198, 255);
+  color: rgb(202, 255, 243);
   font-size: 30px;
   font-weight: 650;
   width: 250px;
   height: 70px;
   padding: 0px 20px;
+
+  filter: blur(10px);
+  opacity: 0;
+}
+
+@keyframes fadeInText {
+  from {
+    filter: blur(10px);
+    opacity: 0;
+  }
+  to {
+    filter: blur(0px);
+    opacity: 1;
+  }
 }
