--- a/src/components/Buttons/ActionButton.module.css
+++ b/src/components/Buttons/ActionButton.module.css
@@ -4,8 +4,10 @@
   color: rgb(202, 255, 243);
   font-size: 30px;
   font-weight: 650;
-  width: 250px;
+  width: auto;
+  min-width: 250px;
   height: 70px;
+  /* padding: 0px 60px; */
   padding: 0px 20px;
 
   filter: blur(10px);
