--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
 :root {
   --background: #ffffff;
@@ -71,7 +71,7 @@ ul {
   border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
     rgba(146, 255, 230, 0.1);
   border-radius: 5px;
-  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.15);
+  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.15);
   background-image: radial-gradient(
       circle at 75% 96%,
       rgba(146, 255, 230, 0.57),
@@ -91,18 +91,14 @@ ul {
   border-style: solid;
   border-width: 1px 1px 1px 1px;
   border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.1)
-  rgba(146, 255, 230, 0.1);
+    rgba(146, 255, 230, 0.1);
   box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
   background-image: radial-gradient(
       circle at 80% 10%,
-      rgba(186, 194, 141, 0.20) 10%,
+      rgba(186, 194, 141, 0.2) 10%,
       rgba(170, 144, 255, 0) 55%
     ),
-    linear-gradient(
-      270deg,
-      rgba(148, 171, 255, 0.1),
-      rgba(90, 30, 255, 0.2)
-    );
+    linear-gradient(270deg, rgba(148, 171, 255, 0.1), rgba(90, 30, 255, 0.2));
   border-radius: 10px;
   backdrop-filter: blur(7px);
   z-index: 1;
@@ -113,7 +109,7 @@ ul {
   border-style: solid;
   border-width: 1px 1px 1px 1px;
   border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
-  rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1);
+    rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1);
   box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25);
   background-image: radial-gradient(
       circle at 100% 10%,
@@ -129,11 +125,33 @@ ul {
       190deg,
       rgba(106, 138, 255, 0.1),
       rgba(67, 183, 187, 0.15)
-      /* 67, 183, 187, */
     );
   border-radius: 18px;
   backdrop-filter: blur(4.5px);
   z-index: 1;
+
+  transition: backdrop-filter 0.3s ease;
+}
+
+.glass-dark-primary::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 18px;
+  background: linear-gradient(200deg, rgba(67, 183, 187, 0), rgba(31, 217, 224, 0.2));
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+
+.glass-dark-primary:hover::after {
+  opacity: 1;
+}
+
+.glass-dark-primary:hover {
+  backdrop-filter: blur(6px);
 }
 
 .glass-dark-secondary {
@@ -141,7 +159,7 @@ ul {
   border-style: solid;
   border-width: 1px 1px 1px 1px;
   border-color: rgba(148, 200, 255, 0.65) rgba(148, 200, 255, 0.65)
-  rgba(148, 200, 255, 0.65) rgba(148, 200, 255, 0.65);
+    rgba(148, 200, 255, 0.65) rgba(148, 200, 255, 0.65);
   /* background-image: radial-gradient(
       circle at 80% 10%,
       rgba(186, 194, 141, 0.05) 10%,
@@ -157,24 +175,27 @@ ul {
   z-index: 1;
 }
 
-
 .full-dropshadow {
   position: relative;
 }
 
 .full-dropshadow::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  
+
   /* Radial gradient mask against background */
   -webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
-  mask: radial-gradient(ellipse 75% 60%, rgba(5, 0, 16, 0.8) 35%, transparent 70%);
+  mask: radial-gradient(
+    ellipse 75% 60%,
+    rgba(5, 0, 16, 0.8) 35%,
+    transparent 70%
+  );
   background-color: rgba(5, 0, 16, 0.25);
-  
+
   z-index: -1;
   pointer-events: none;
 }
