--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css");
+/* @import url("https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"); */
 @import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
 :root {
@@ -47,6 +47,20 @@ ul {
   }
 }
 
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
+}
+
+button:focus {
+  outline: none;
+}
 /* ------ Formatting Classes ------ */
 .section {
   padding: 3rem 0;
@@ -54,13 +68,13 @@ ul {
 }
 
 .container {
-  max-width: 1024px;
+  max-width: 1345px;
   padding: 0 2rem;
   margin: 0 auto;
 
-  @media (max-width: 640px) {
+  /* @media (max-width: 640px) {
     padding: 0 1rem;
-  }
+  } */
 }
 
 /* ------ General Custom Styles ------ */
@@ -133,7 +147,6 @@ ul {
   border-radius: 18px;
   backdrop-filter: blur(4.5px);
   z-index: 1;
-
   transition: backdrop-filter 0.3s ease;
 }
 
