--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -24,7 +24,8 @@
 }
 
 .navbar-logo {
-  width: 200px;
+  width: auto;
+  max-width: 200px;
   height: auto;
   margin-left: 20px;
   display: flex;
