--- a/src/components/Buttons/ActionButton.module.css
+++ b/src/components/Buttons/ActionButton.module.css
@@ -1,33 +1,25 @@
 .action-button {
-  user-select: auto;
   font-family: "Jura", sans-serif;
   color: rgb(202, 255, 243);
-
   font-size: 30px;
   font-weight: 650;
   width: auto;
   min-width: 250px;
   height: 70px;
   padding: 0px 20px;
-
-  filter: blur(10px);
   opacity: 0;
+  filter: blur(10px);
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 
   transition: color 0.2s ease-out;
 }
 
 .action-button:hover {
   color: rgb(225, 255, 248);
-
-}
-
-@keyframes fadeInText {
-  from {
-    filter: blur(10px);
-    opacity: 0;
-  }
-  to {
-    filter: blur(0px);
-    opacity: 1;
-  }
 }
