--- a/src/components/DynamicText/DynamicText.module.css
+++ b/src/components/DynamicText/DynamicText.module.css
@@ -1,15 +1,20 @@
 .dynamic-text-wrapper {
+  margin-top: 10px;
+  margin-bottom: -5px;
   display: flex;
   height: auto;
   width: 63%;
 }
 
 .dynamic-text {
-  font-family: "Jura", "Montserrat", sans-serif;
-  font-size: 3.5rem;
-  font-weight: 500;
-
-  color: pink;
+  user-select: none;
+  font-family: "Audiowide", sans-serif;
+  font-size: 3.6rem;
+  font-weight: 400;
+  letter-spacing: 0.05em;
+  text-shadow: 0px 0px 18px rgba(5, 0, 16, 0.2),
+    0px 0px 24px rgba(5, 0, 16, 0.4);
+  color: rgba(148, 200, 255, 0.8);
   transition: filter var(--fade-duration, 0.3s) ease-out,
     opacity var(--fade-duration, 0.3s) ease-out;
 }
