--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
-  font-family: "Montserrat", sans-serif;
-  font-size: 1.3em;
+  font-family: "Audiowide", sans-serif;
+  font-size: 1.25em;
   text-shadow: 0px 0px 20px rgb(5, 0, 16, 0.7);
   position: fixed;
   transform: translateX(-50%);
@@ -15,12 +15,18 @@
 }
 
 .navbar-content {
-  user-select: none;
   display: flex;
   width: 100%;
   height: 100%;
   justify-content: space-between;
   align-items: center;
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .navbar-logo {
