--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -29,7 +29,25 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.navbar-logo {
+.navbar-logo-svg {
+  width: auto;
+  max-width: 200px;
+  height: auto;
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-logo-text {
+  font-family: "Michroma", "sans serif";
+  font-size: 2.5rem;
+  font-weight: 600;
+  letter-spacing: 0.15rem;
+  color: rgb(202, 255, 243);
+  text-shadow: 0px 0px 18px rgba(160, 255, 233, 0.5),
+    0px 0px 24px rgba(99, 50, 204, 0.6);
+
   width: auto;
   max-width: 200px;
   height: auto;
@@ -49,16 +67,19 @@
 }
 
 .navbar-link {
+  color: rgb(255, 255, 255);
   padding: 5px 10px;
   transition: color 0.25s ease-out, text-shadow 0.25s ease-out;
 }
 
 .navbar-link.active {
   color: rgb(146, 255, 230);
-  text-shadow: 0 0 6px rgba(146, 255, 230, 0.5), 0 0 10px rgba(146, 255, 230, 0.5);
+  text-shadow: 0 0 6px rgba(146, 255, 230, 0.5),
+    0 0 10px rgba(146, 255, 230, 0.5);
 }
 
 .navbar-link:hover {
   color: rgb(146, 255, 230);
-  text-shadow: 0 0 6px rgba(146, 255, 230, 0.5), 0 0 10px rgba(146, 255, 230, 0.5);
+  text-shadow: 0 0 6px rgba(146, 255, 230, 0.5),
+    0 0 10px rgba(146, 255, 230, 0.5);
 }
