--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,26 @@
 /* @import url("https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css"); */
 /* @import url("https://fonts.googleapis.com/css2?family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&display=swap"); */
+/*
+  Google Fonts Imported:
+
+  1. Anta
+  2. Audiowide
+  3. Doto (weights: 100–900)
+  4. Hubballi
+  5. Jura (weights: 300–700)
+  6. Kdam Thmor Pro
+  7. Lato (weights: 100, 300, 400, 700, 900; italics: 100, 300, 400, 700, 900)
+  8. Michroma
+  9. Orbitron (weights: 400–900)
+  10. Righteous
+  11. Syncopate (weights: 400, 700)
+  12. Train One
+  13. Montserrat (weights: 100–900)
+*/
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Audiowide&family=Doto:wght@100..900&family=Hubballi&family=Jura:wght@300..700&family=Kdam+Thmor+Pro&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Michroma&family=Orbitron:wght@400..900&family=Righteous&family=Syncopate:wght@400;700&family=Train+One&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -204,7 +223,7 @@ button:focus {
     rgba(5, 0, 16, 0.8) 35%,
     transparent 70%
   );
-  background-color: rgba(5, 0, 16, 0.25);
+  background-color: rgba(5, 0, 16, 0.20);
 
   z-index: -1;
   pointer-events: none;
@@ -240,6 +259,32 @@ button:focus {
 
 .full-dropshadow-hoverable:hover::before {
   background-color: rgba(148, 200, 255, 0.15);
+}
+
+.full-dropshadow-light {
+  position: relative;
+}
+
+/* --- full-dropshadow-light --- */
+.full-dropshadow-light::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  /* Radial gradient mask against background */
+  -webkit-mask: radial-gradient(ellipse 75% 60%, black 35%, transparent 70%);
+  mask: radial-gradient(
+    ellipse 75% 60%,
+    rgba(5, 0, 16, 0.8) 15%,
+    transparent 70%
+  );
+  background-color: rgba(5, 0, 16, 0.10);
+
+  z-index: -1;
+  pointer-events: none;
 }
 
 /* --- Fade-In Animation --- */
