--- a/src/components/DynamicText/DynamicText.module.css
+++ b/src/components/DynamicText/DynamicText.module.css
@@ -3,16 +3,16 @@
   margin-bottom: -5px;
   display: flex;
   height: auto;
-  width: 63%;
+  width: 53%;
 }
 
 .dynamic-text {
-  font-family: "Audiowide", sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: rgba(148, 200, 255, 0.8);
   user-select: none;
   font-size: 3.6rem;
   font-weight: 400;
-  letter-spacing: 0.05em;
+  /* letter-spacing: 0.05em; */
   text-shadow: 0px 0px 18px rgba(5, 0, 16, 0.2),
   0px 0px 24px rgba(5, 0, 16, 0.4);
 
@@ -32,3 +32,5 @@
   filter: blur(8px);
   opacity: 0;
 }
+
+
