--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 .navbar {
-  font-family: "Audiowide", sans-serif;
-  font-size: 1.25em;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.3em;
   text-shadow: 0px 0px 20px rgb(5, 0, 16, 0.7);
   position: fixed;
   transform: translateX(-50%);
@@ -45,8 +45,8 @@
   font-weight: 600;
   letter-spacing: 0.15rem;
   color: rgb(202, 255, 243);
-  text-shadow: 0px 0px 18px rgba(160, 255, 233, 0.5),
-    0px 0px 24px rgba(99, 50, 204, 0.6);
+  text-shadow: 0px 0px 18px rgba(160, 255, 233, 0.45),
+    0px 0px 24px rgba(99, 50, 204, 0.3);
 
   width: auto;
   max-width: 200px;
