--- a/src/components/Section-2/Experience.module.css
+++ b/src/components/Section-2/Experience.module.css
@@ -1,32 +1,69 @@
 .exp-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 100vh;
-  padding-top: 300px;
 }
 
-.progress-bar-container {
+.exp-bar-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 9px;
+  position: relative;
+  top: 210px;
   width: 100%;
   /* max-width: 800px; */
   height: auto;
   background-color: none;
-  border-radius: 4px;
-  margin-bottom: 600px;
 }
 
-.progress-bar {
+.exp-bar {
   width: 100%;
   height: 10px;
+  /* background: rgba(148, 200, 255, 0.6); */
   background: linear-gradient(
     90deg,
-    rgba(148, 200, 255, 0.6),
-    rgb(146, 255, 230, 0.8)
+    rgba(148, 200, 255, 0.4),
+    rgba(148, 200, 255, 0.8) 75%,
+    rgba(146, 255, 253, 0.8)
   );
   border-radius: 6px;
-  box-shadow: 
-    0 0 10px rgba(146, 255, 230, 0.4),
+  box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
     0 0 20px rgba(146, 255, 230, 0.2);
-    user-select: none;
+  user-select: none;
+  position: relative;
+}
+
+.exp-bar-trailing-dots {
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background: rgba(146, 255, 253, 0.8);
+  box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+    0 0 20px rgba(146, 255, 230, 0.2);
+  user-select: none;
+}
+
+.exp-bar-date-line {
+  position: absolute;
+  left: var(--position-left);
+  width: 2px;
+  height: 28px;
+  border-radius: 3px;
+  background: rgba(148, 200, 255, 1);
+  filter: blur(1px);
+}
+
+.checkpoint {
+  position: absolute;
+  left: 10%;
+  width: 31px;
+  height: 31px;
+  border-radius: 50%;
+  background: rgb(185, 235, 252);
+  box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+    0 0 20px rgba(146, 255, 230, 0.3), 0 0 20px rgba(148, 255, 178, 0.2);
+  user-select: none;
+  filter: blur(5px);
 }
