--- a/src/components/Section-2/Experience.module.css
+++ b/src/components/Section-2/Experience.module.css
@@ -1,68 +1,74 @@
 .exp-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100vh;
 }
 
 .exp-bar-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 9px;
-  position: relative;
-  top: 210px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	align-content: center;
+	gap: 9px;
+	position: relative;
+	top: 210px;
+	width: 100%;
+	/* max-width: 800px; */
+	height: auto;
+}
+
+.exp-bar-wrapper {
   width: 100%;
-  /* max-width: 800px; */
-  height: auto;
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
 .exp-bar {
-  width: 100%;
-  height: 10px;
-  /* background: rgba(148, 200, 255, 0.6); */
-  background: linear-gradient(
-    90deg,
-    rgba(148, 200, 255, 0.4),
-    rgba(148, 200, 255, 0.8) 75%,
-    rgba(146, 255, 253, 0.8)
-  );
-  border-radius: 6px;
-  box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
-    0 0 20px rgba(146, 255, 230, 0.2);
-  user-select: none;
-  position: relative;
+	width: 100%;
+	height: 10px;
+	/* background: rgba(148, 200, 255, 0.6); */
+	background: linear-gradient(
+		90deg,
+		rgba(148, 200, 255, 0.4),
+		rgba(148, 200, 255, 0.8) 75%,
+		rgba(146, 255, 253, 0.8)
+	);
+	border-radius: 6px;
+	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+		0 0 20px rgba(146, 255, 230, 0.2);
+	user-select: none;
+	position: relative;
+}
+
+.trailing-dots-container {
+	display: flex;
+	flex-direction: row;
+	gap: 9px;
 }
 
 .exp-bar-trailing-dots {
-  width: 9px;
-  height: 9px;
-  border-radius: 50%;
-  background: rgba(146, 255, 253, 0.8);
-  box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
-    0 0 20px rgba(146, 255, 230, 0.2);
-  user-select: none;
-}
-
-.exp-bar-date-line {
-  position: absolute;
-  left: var(--position-left);
-  width: 2px;
-  height: 28px;
-  border-radius: 3px;
-  background: rgba(148, 200, 255, 1);
-  filter: blur(1px);
+	width: 9px;
+	height: 9px;
+	border-radius: 50%;
+	background: rgba(146, 255, 253, 0.8);
+	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+		0 0 20px rgba(146, 255, 230, 0.2);
+	user-select: none;
+	/* position: absolute;
+    right: var(--position-right); */
 }
 
 .checkpoint {
-  position: absolute;
-  left: 10%;
-  width: 31px;
-  height: 31px;
-  border-radius: 50%;
-  background: rgb(185, 235, 252);
-  box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
-    0 0 20px rgba(146, 255, 230, 0.3), 0 0 20px rgba(148, 255, 178, 0.2);
-  user-select: none;
-  filter: blur(5px);
+	position: absolute;
+	left: 10%;
+	width: 31px;
+	height: 31px;
+	border-radius: 50%;
+	background: rgb(185, 235, 252);
+	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
+		0 0 20px rgba(146, 255, 230, 0.3), 0 0 20px rgba(148, 255, 178, 0.2);
+	user-select: none;
+	filter: blur(5px);
 }
