--- a/src/components/Section-1/Home.module.css
+++ b/src/components/Section-1/Home.module.css
@@ -13,10 +13,11 @@
   align-items: center;
   gap: 30px;
   margin-top: 50px;
-  width: 53%;
+  width: 700px;
 }
 
 .name-wrapper {
+    width: auto;
   color: rgba(148, 200, 255, 0.65);
   font-weight: 500;
   font-size: 12rem;
