--- a/src/components/Section-2/Experience.module.css
+++ b/src/components/Section-2/Experience.module.css
@@ -1,21 +1,26 @@
 .exp-container {
 	display: flex;
+	position: relative;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
+	margin-right: auto;
+	margin-left: auto;
+	width: 75%;
+	/* max-width: 1600px; */
 	height: 100vh;
 }
 
 .exp-bar-container {
 	display: flex;
-	/* max-width: 800px; */
-	position: relative;
-	top: 300px;
+	position: absolute;
+	top: 25%;
+	/* top: 350px; */
 	flex-direction: row;
 	align-content: center;
 	align-items: center;
 	gap: 9px;
 	width: 100%;
-	height: auto;
 }
 
 .exp-bar-wrapper {
@@ -74,20 +79,18 @@
 	user-select: none;
 }
 
-
-
 .gradient-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  clip-path: var(--clip-path, none);
-  background: linear-gradient(
-    135deg,
-    rgba(146, 255, 230, 0.4) 0%,
-    rgba(148, 200, 255, 0.6) 50%,
-    rgba(106, 138, 255, 0.4) 100%
-  );
-  width: 100%;
-  height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+	clip-path: var(--clip-path, none);
+	background: linear-gradient(
+		135deg,
+		rgba(146, 255, 230, 0.4) 0%,
+		rgba(148, 200, 255, 0.6) 50%,
+		rgba(106, 138, 255, 0.4) 100%
+	);
+	width: 100%;
+	height: 100%;
 }
