--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,13 +21,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
 
 :root {
-	--primary-rgb: 146, 255, 230;
+	--primary-rgb: 146, 255, 253;
 	--secondary-rgb: 148, 200, 255;
 
 	--color-primary: rgb(var(--primary-rgb));
 	--color-secondary: rgb(var(--secondary-rgb));
 	--color-violet: rgb(var(--violet-rgb));
 	--bg-dark: rgb(var(--dark-bg-rgb));
+    font-family: 'Jura';
 }
 
 @media (prefers-color-scheme: dark) {
@@ -213,9 +214,9 @@ button:focus {
 	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
 	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
-	box-shadow: 0px 0px 10px 10px rgba(115, 157, 255, 0.3);
-	box-shadow: 0px 0px 20px 10px rgba(115, 157, 255, 0.2);
-	box-shadow: 0px 0px 30px 10px rgba(115, 157, 255, 0.1);
+	box-shadow: 0px 0px 10px 5px rgba(115, 157, 255, 0.3);
+	box-shadow: 0px 0px 20px 5px rgba(115, 157, 255, 0.2);
+	box-shadow: 0px 0px 30px 5px rgba(115, 157, 255, 0.1);
 	border: 1px solid rgba(var(--secondary-rgb), 0.1);
 	background-image: radial-gradient(
 			circle at 100% 10%,
