--- a/src/components/Section-2/Experience.module.css
+++ b/src/components/Section-2/Experience.module.css
@@ -7,9 +7,10 @@
 	margin-right: auto;
 	margin-left: auto;
 	width: 75%;
+	min-width: 1000px;
 	max-width: 1500px;
 	height: 100vh;
-	min-height: 800px;
+	min-height: 1000px;
 }
 
 .exp-bar-container {
