--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -354,6 +354,8 @@ button:focus {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  /* Hack for "Why the heck are my backgrounds purple-ish" */
+  filter: hue-rotate(-7deg) 
 }
 
 .fullscreen-video.visible {
