--- a/src/components/Buttons/ActionButton.module.css
+++ b/src/components/Buttons/ActionButton.module.css
@@ -7,8 +7,7 @@
   min-width: 250px;
   height: 70px;
   padding: 0px 20px;
-  opacity: 0;
-  filter: blur(10px);
+  /* filter: blur(10px); */
 
   user-select: none;
   -webkit-user-select: none;
