--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,21 +21,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
 
 :root {
+	none: rgba(146, 255, 253);
+	none: rgba(148, 200, 255);
+
 	--primary-rgb: 146, 255, 253;
 	--secondary-rgb: 148, 200, 255;
 
 	--color-primary: rgb(var(--primary-rgb));
 	--color-secondary: rgb(var(--secondary-rgb));
-	--color-violet: rgb(var(--violet-rgb));
 	--bg-dark: rgb(var(--dark-bg-rgb));
     font-family: 'Jura';
-}
-
-@media (prefers-color-scheme: dark) {
-	:root {
-		--background: none;
-		--foreground: #ededed;
-	}
 }
 
 * {
@@ -51,8 +46,6 @@ body {
 }
 
 body {
-	background: var(--background);
-	color: var(--foreground);
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
@@ -210,7 +203,7 @@ button:focus {
 	position: relative;
 	z-index: 1;
 	backdrop-filter: blur(4.5px);
-	/* border-width: 1px 1px 1px 1px; */
+	border-width: 1px 1px 1px 1px;
 	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
 	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
@@ -229,6 +222,22 @@ button:focus {
 			rgba(170, 144, 255, 0) 35%
 		),
 		linear-gradient(190deg, rgba(106, 138, 255, 0.1), rgba(67, 183, 187, 0.033));
+}
+
+/* --- glass-dark-soft-no-gradient --- */
+.glass-dark-soft-no-gradient {
+	position: relative;
+	z-index: 1;
+	backdrop-filter: blur(4.5px);
+	border-width: 1px 1px 1px 1px;
+	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
+		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
+	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
+	box-shadow: 0px 0px 10px 5px rgba(115, 157, 255, 0.3);
+	box-shadow: 0px 0px 20px 5px rgba(115, 157, 255, 0.2);
+	box-shadow: 0px 0px 30px 5px rgba(115, 157, 255, 0.1);
+	border: 1px solid rgba(var(--secondary-rgb), 0.1);
+
 }
 
 /* --- full-dropshadow --- */
