--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -203,7 +203,6 @@ button:focus {
 	position: relative;
 	z-index: 1;
 	backdrop-filter: blur(4.5px);
-	border-width: 1px 1px 1px 1px;
 	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
 	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
@@ -211,6 +210,7 @@ button:focus {
 	box-shadow: 0px 0px 20px 5px rgba(115, 157, 255, 0.2);
 	box-shadow: 0px 0px 30px 5px rgba(115, 157, 255, 0.1);
 	border: 1px solid rgba(var(--secondary-rgb), 0.1);
+	border-width: 1px 1px 1px 1px;
 	background-image: radial-gradient(
 			circle at 100% 10%,
 			rgba(77, 30, 208, 0.05) 20%,
@@ -229,7 +229,6 @@ button:focus {
 	position: relative;
 	z-index: 1;
 	backdrop-filter: blur(4.5px);
-	border-width: 1px 1px 1px 1px;
 	/* border-color: rgba(146, 255, 230, 0.2) rgba(146, 255, 230, 0.2)
 		rgba(146, 255, 230, 0.1) rgba(255, 255, 255, 0.1); */
 	/* box-shadow: inset 0px 0px 14px 4px rgba(40, 31, 68, 0.25); */
@@ -237,6 +236,7 @@ button:focus {
 	box-shadow: 0px 0px 20px 5px rgba(115, 157, 255, 0.2);
 	box-shadow: 0px 0px 30px 5px rgba(115, 157, 255, 0.1);
 	border: 1px solid rgba(var(--secondary-rgb), 0.1);
+	border-width: 1px 1px 1px 1px;
 
 }
 
@@ -351,12 +351,12 @@ button:focus {
   left: 0;
   opacity: 0;
   z-index: -999;
+  /* Hack for "Why the heck are my backgrounds purple-ish" */
+  filter: hue-rotate(-7deg);
   transition: opacity 0.5s ease-in-out;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  /* Hack for "Why the heck are my backgrounds purple-ish" */
-  filter: hue-rotate(-7deg) 
+  object-fit: cover 
 }
 
 .fullscreen-video.visible {
