--- a/src/components/Section-3/Skills.module.css
+++ b/src/components/Section-3/Skills.module.css
@@ -6,15 +6,15 @@
   padding-top: 300px;
   padding-bottom: 40vh;
   height: 100vh;
+  overflow-x: auto;
 }
 
 .skills-showcase {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-content: center;
-    max-width: 1500px;
-    width: 75%;
-    height: 600px;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+  gap: 82px;
+  height: auto;
 }
