--- a/src/components/Section-3/Skills.module.css
+++ b/src/components/Section-3/Skills.module.css
@@ -4,6 +4,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	gap: 100px;
 	margin-right: auto;
 	margin-left: auto;
 	width: 90%;
