--- a/src/components/TextBox/TextBox.module.css
+++ b/src/components/TextBox/TextBox.module.css
@@ -1,8 +1,10 @@
 .text-container {
 	width: auto;
 	height: auto;
-	padding: 20px;
+	padding: 22px 32px;
 	border-radius: 8px;
     font-size: 20px;
+    line-height: 32px;
     text-shadow: rgba(5, 0, 16);
+    /* background-color: rgba(5, 0, 16, 0.2); */
 }
