--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -39,7 +39,7 @@
 .scroll-section {
   position: relative;
   background: none;
-  height: 100%;
+  height: 100vh;
   scroll-snap-align: start;
   scroll-snap-stop: always;
 }
