--- a/src/components/Section-3/Skills.module.css
+++ b/src/components/Section-3/Skills.module.css
@@ -1,17 +1,17 @@
 .skills-page-container {
 	display: flex;
 	position: relative;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	gap: 100px;
+	gap: 90px;
 	margin-right: auto;
 	margin-left: auto;
 	width: 90%;
 	min-width: 1000px;
 	max-width: 1700px;
 	height: 100vh;
-	min-height: 1000px;
+	/* min-height: 1000px; */
 }
 
 .skills-showcase {
