Scroll is now instant when clicking on NavBar link.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -32,7 +32,7 @@
   /* margin-top: 104px; */
   height: 100vh;
   overflow-y: scroll;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
   scroll-snap-type: y mandatory;
 }
 
