--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,14 +5,6 @@
   overflow: hidden;
 }
 
-.main code {
-  border-radius: 4px;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  min-height: 0;
-  font-family: inherit;
-}
-
 .background-scene {
   position: fixed;
   top: 0;
@@ -29,7 +21,6 @@
 }
 
 .scroll-wrapper {
-  /* margin-top: 104px; */
   height: 100vh;
   overflow-y: scroll;
   scroll-behavior: auto;
@@ -49,7 +40,7 @@
   scroll-snap-align: end;
 }
 
-/* Scrollbar Disable */
+/* Disable Scrollbar */
 .scroll-wrapper {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
