--- a/src/components/Section-2/Experience.module.css
+++ b/src/components/Section-2/Experience.module.css
@@ -1,15 +1,16 @@
 .exp-container {
 	display: flex;
-	position: relative;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	margin-right: auto;
 	margin-left: auto;
-	width: 75%;
+	width: 80%;
 	min-width: 1000px;
 	max-width: 1500px;
 	height: 100vh;
+	min-height: 1100px;
+	gap: 256px;
 }
 
 .exp-bar-wrapper {
@@ -22,9 +23,6 @@
 
 .exp-bar-container {
 	display: flex;
-	position: absolute;
-	top: 25%;
-	/* top: 350px; */
 	flex-direction: row;
 	align-content: center;
 	align-items: center;
