--- a/src/components/Section-1/Home.module.css
+++ b/src/components/Section-1/Home.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+	transform: translateZ(0);
+  will-change: opacity;
   padding-top: 300px;
   padding-bottom: 40vh;
   height: 100vh;
