--- a/src/components/Section-2/Experience.module.css
+++ b/src/components/Section-2/Experience.module.css
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	gap: 256px;
 	margin-right: auto;
 	margin-left: auto;
 	width: 80%;
@@ -10,7 +11,6 @@
 	max-width: 1500px;
 	height: 100vh;
 	min-height: 1100px;
-	gap: 256px;
 }
 
 .exp-bar-wrapper {
@@ -32,10 +32,11 @@
 
 .exp-bar {
 	position: relative;
+	transform: translateZ(0);
+	will-change: transform;
 	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
 		0 0 20px rgba(146, 255, 230, 0.2);
 	border-radius: 6px;
-	/* background: rgba(148, 200, 255, 0.6); */
 	background: linear-gradient(
 		90deg,
 		rgba(148, 200, 255, 0.4),
@@ -45,6 +46,7 @@
 	width: 100%;
 	height: 10px;
 	user-select: none;
+
 }
 
 .trailing-dots-container {
@@ -54,6 +56,8 @@
 }
 
 .exp-bar-trailing-dots {
+	transform: translateZ(0);
+	will-change: transform, opacity;
 	box-shadow: 0 0 10px rgba(146, 255, 230, 0.4),
 		0 0 20px rgba(146, 255, 230, 0.2);
 	border-radius: 50%;
@@ -61,6 +65,4 @@
 	width: 9px;
 	height: 9px;
 	user-select: none;
-	/* position: absolute;
-    right: var(--position-right); */
 }
