--- a/src/components/Section-3/Skills.module.css
+++ b/src/components/Section-3/Skills.module.css
@@ -23,6 +23,8 @@
 	align-content: center;
 	justify-content: center;
 	align-items: center;
+	transform: translateZ(0);
+	will-change: transform, opacity;
 	width: auto;
 	height: auto;
 }
