--- a/src/components/SkillBox/SkillsBox.module.css
+++ b/src/components/SkillBox/SkillsBox.module.css
@@ -14,6 +14,8 @@
 	padding: 12px 24px 12px 24px;
 	width: auto;
 	height: auto;
+	will-change: transform, opacity;
+	transform: translateZ(0);
 }
 
 .box-title {
