--- a/src/components/Sections/Section-3/Skills.module.css
+++ b/src/components/Sections/Section-3/Skills.module.css
@@ -9,8 +9,8 @@
 	margin-left: auto;
 	width: 90%;
 	max-width: 1700px;
-	height: 100vh;
-	min-height: 900px;
+	height: 100%;
+	/* min-height: 900px; */
 }
 
 .skills-showcase {
