Graphics acceleration added to components associated with Projects page.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -33,6 +33,9 @@
   height: 100vh;
   scroll-snap-align: start;
   scroll-snap-stop: always;
+  /* GPU acceleration */
+  transform: translateZ(0);
+  will-change: transform;
 }
 
 .footer {
